<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.starcats</groupId>
    <artifactId>blinky-dome</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	<maven.compiler.release>16</maven.compiler.release>
        <main.class>com.github.starcats.blinkydome.AppGui</main.class>
    </properties>

    <repositories>
        <repository>
            <id>central</id>
            <name>Maven Repository Switchboard</name>
            <layout>default</layout>
            <url>https://repo.maven.apache.org/maven2</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <!-- Custom repo for Processing 4. -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>heronarts.lx</groupId>
            <artifactId>lx</artifactId>
            <version>HEAD</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>heronarts.p3lx</groupId>
            <artifactId>p3lx</artifactId>
            <version>HEAD</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>ddf</groupId>
            <artifactId>minim</artifactId>
            <version>v2.2.2</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.github.starcats</groupId>
            <artifactId>PixelPusher</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/PixelPusher.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.github.starcats</groupId>
            <artifactId>apa102</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/apa102-java-rpi-lib-1.0-all.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.github.micycle1</groupId>
            <artifactId>processing-core-4</artifactId>
            <version>d33cae501e</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>${main.class}</mainClass>
                    <arguments>
                        <argument>-classpath</argument>
                    </arguments>
                    <classpathScope>compile</classpathScope>

                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>${main.class}</mainClass>
                        </manifest>
                        <manifestEntries>
                            <Implementation-Title>blinky-dome</Implementation-Title>
                            <Implementation-Version>1.0</Implementation-Version>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
